# music-rpg-game

./: CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  cmake_install.cmake  notes.txt  readme.md
src/: main.cpp
